<resources>
    <string name="app_name">Forks</string>
    <string name="fork_calllog_btn">Fork Call Log</string>
    <string name="fork_contact_btn">Fork Contact</string>
    <string name="fork_vvm_btn">Fork VVM</string>
    <string name="calllog_number_hint">Specify a number</string>
    <string name="calllog_quantity_hint">Call log quantity you desire</string>
    <string name="contacts_quantity_hint">Contacts quantity you desire</string>

    <!-- call log radio buttons -->
    <string name="call_log_outgoing">Outgoing</string>
    <string name="call_log_incoming">Incoming</string>
    <string name="call_log_rejected">Rejected</string>
    <string name="call_log_missed">Missed</string>

    <!-- call log check boxes -->
    <string name="call_log_volte">VoLTE</string>
    <string name="call_log_vowifi">VoWiFi</string>
    <string name="call_log_volte_hd">HD</string>
    <string name="call_log_volte_none">None</string>
    <string name="call_log_encrypt">Encrypted Call</string>
    <string name="call_log_video">Video Call</string>
    <string name="call_log_roll_dice">All Random</string>

    <string name="start_fork_call_logs">Start Fork</string>
    <string name="start_fork_contact">Start Fork</string>
    <string name="permission_request_snackbar">OK</string>
    <string name="fork_call_log_snackbar">OK</string>
    <string name="phone_num_blank_msg">Input a valid phone number.</string>
    <string name="call_log_quantity_msg">Input a valid quantity.</string>
    <string name="contact_quantity_msg">Input a valid quantity.</string>

    <string name="fork_task_forking">Forking\u2026</string>
    <string name="fork_task_completed">Fork Completed.</string>
    <string name="fork_task_canceled">Fork Canceled.</string>
    <string name="fork_task_failed">Fork Failed.</string>
    <string name="fork_already_in_procedure_msg">Please wait for last task to finish.</string>

    <string name="menu_call_log_rcs">Fork RCS</string>
    <string name="call_log_rcs_subject">Subject</string>
    <string name="call_log_rcs_post_call_text">Post Call Text</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="fork_contacts_all_type">All types, including E-mail, Address, IM, Organization, Nickname, Website, Relation, Event and Note</string>
    <string name="fork_contacts_avatar">Generate Avatar</string>

    <!--shortcuts-->
    <string name="shortcut_fork_contact">@string/fork_contact_btn</string>
    <string name="shortcut_fork_call_log">@string/fork_calllog_btn</string>
    <string name="shortcut_disabled">Shortcut Disabled</string>

    <string name="advanced_vvm_send_state">Send State</string>
    <string-array name="vvm_config_states">
        <item>OK</item>
        <item>NOT_CONFIGURED</item>
        <item>CAN_BE_CONFIGURED</item>
        <item>CONFIGURING</item>
        <item>FAILED</item>
        <item>DISABLED</item>
    </string-array>

    <string name="advanced_vvm_send_data">Send Data</string>
    <string-array name="vvm_data_state">
        <item>OK</item>
        <item>NO_CONNECTION</item>
        <item>NO_CONNECTION_CELLULAR_REQUIRED</item>
        <item>BAD_CONFIGURATION</item>
        <item>COMMUNICATION_ERROR</item>
        <item>SERVER_ERROR </item>
        <item>SERVER_CONNECTION_ERROR</item>
    </string-array>

    <string name="advanced_vvm_send_notification">Send Notification</string>
    <string-array name="vvm_notification">
        <item>OK</item>
        <item>NO_CONNECTION</item>
        <item>MESSAGE_WAITING</item>
    </string-array>

    <string name="sub_id_one">SUB 1</string>
    <string name="sub_id_two">SUB 2</string>
</resources>
