<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rcs_call_log_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calllog_number_hint"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rcs_call_log_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_log_rcs_subject"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rcs_call_log_post_call_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_log_rcs_post_call_text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rcs_call_log_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calllog_quantity_hint"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/call_log_type_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/outgoing_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/call_log_outgoing"
            android:textAllCaps="false"/>

        <RadioButton
            android:id="@+id/rejected_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/call_log_rejected"
            android:textAllCaps="false"/>

        <RadioButton
            android:id="@+id/answered_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/call_log_incoming"
            android:textAllCaps="false"/>

        <RadioButton
            android:id="@+id/missed_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/call_log_missed"
            android:textAllCaps="false"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/call_log_roll_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_log_roll_dice"
        android:textAllCaps="false"/>

</LinearLayout>